자바 버전 차이로 CI에서 에러서 참조 메서드 사용 하지않고 다시 푸시